--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -21,8 +21,8 @@
             <div class="col-md-4">
                 <h5>Контакты</h5>
                 <address>
-                    <i class="fas fa-map-marker-alt"></i> Астана , ул. Сыганак 54 <br>
-                    <i class="fas fa-phone"></i> +7 (776) 777-45-45<br>
+                    <i class="fas fa-map-marker-alt"></i> Астана , ул. Атамекен 54 <br>
+                    <i class="fas fa-phone"></i> +7 (776) 777-77-77<br>
                     <i class="fas fa-envelope"></i> info@weddingplanner.kz
                 </address>
                 <div class="social-links">
