--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -14,18 +14,23 @@
                         <i class="fas fa-home"></i> Главная
                     </a>
                 </li>
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if 'checklist' in request.path %}active{% endif %}" href="{% url 'checklist' %}">
-                            <i class="fas fa-tasks"></i> Чек-лист
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if 'gallery' in request.path %}active{% endif %}" href="{% url 'gallery' %}">
-                            <i class="fas fa-images"></i> Галерея идей
-                        </a>
-                    </li>
-                {% endif %}
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'checklist' in request.path %}active{% endif %}" href="{% url 'checklist' %}">
+                                <i class="fas fa-tasks"></i> Чек-лист
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'gallery' in request.path %}active{% endif %}" href="{% url 'gallery' %}">
+                                <i class="fas fa-images"></i> Галерея идей
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'gemini' in request.path %}active{% endif %}" href="{% url 'gemini_chat' %}">
+                                <i class="fas fa-robot"></i> AI Помощник
+                            </a>
+                        </li>
+                    {% endif %}
             </ul>
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
